Fix #127542: OBJ material groups are not written unless .mtl file is also written

These two settings are not coupled together, one should be able to
export face material groups without exporting the .mtl file.